syntax = "proto3";

package daprexamples;

option java_outer_classname = "CreateOrderProtos";
option java_package = "generate.protos";

// User Code definitions
service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
}

message CreateOrderRequest {
    string ProductID = 1; //Product ID
    int32 Amount=2; //Product Amount
    string CustomerID=3; //Customer ID
}

message CreateOrderResponse {
    bool Succeed = 1; //Create Order Result，true:success，false:fail
}